--- a/luci-app-openclash/luasrc/view/openclash/update.htm
+++ b/luci-app-openclash/luasrc/view/openclash/update.htm
@@ -264,7 +264,7 @@
           		var arr_core = corelv.split(",");
           		var coretunlvis = arr_core[1];
           		if ( coretunlvis != "" ) {
-              	url3='https://github.com/vernesong/OpenClash/releases/download/TUN-Premium/clash-'+status.corever+'-'+coretunlvis+'.gz';
+              	url3='https://raw.githubusercontent.com/Ariesly/OpenClash/master/core-lateset/premium/clash-'+status.corever+'-'+coretunlvis+'.gz';
               	winOpen(url3);
           		}
           		else {
